--- a/qtmutualismbreakdownerparameterswidget.ui
+++ b/qtmutualismbreakdownerparameterswidget.ui
@@ -25,163 +25,27 @@
      <property name="currentIndex">
       <number>0</number>
      </property>
-     <widget class="QWidget" name="page_timeplot">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>400</width>
-        <height>292</height>
-       </rect>
-      </property>
-      <attribute name="label">
-       <string>Timeplot</string>
-      </attribute>
-      <layout class="QGridLayout" name="gridLayout_9">
-       <item row="0" column="0">
-        <widget class="QLabel" name="label_n_timesteps">
-         <property name="text">
-          <string>#timesteps</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="2">
-        <widget class="QDoubleSpinBox" name="box_timeplot_delta_t">
-         <property name="decimals">
-          <number>6</number>
-         </property>
-         <property name="minimum">
-          <double>0.000000000000000</double>
-         </property>
-         <property name="maximum">
-          <double>1.000000000000000</double>
-         </property>
-         <property name="singleStep">
-          <double>0.001000000000000</double>
-         </property>
-         <property name="value">
-          <double>0.010000000000000</double>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="QLabel" name="label_timeplot_delta_t">
-         <property name="text">
-          <string>Delta t</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="0" colspan="3">
-        <widget class="QLabel" name="image_timeplot">
-         <property name="text">
-          <string/>
-         </property>
-         <property name="pixmap">
-          <pixmap resource="MutualismBreakdowner.qrc">:/images/Time.jpg</pixmap>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="2">
-        <widget class="QSpinBox" name="box_n_timesteps">
-         <property name="maximum">
-          <number>1000000000</number>
-         </property>
-         <property name="value">
-          <number>100</number>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="0">
-        <spacer name="verticalSpacer_3">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-      </layout>
-     </widget>
      <widget class="QWidget" name="page_spatial_plot">
       <property name="geometry">
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>385</width>
-        <height>256</height>
+        <width>400</width>
+        <height>293</height>
        </rect>
       </property>
       <attribute name="label">
        <string>Spatial plot</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_10">
-       <item row="2" column="1">
-        <widget class="QSpinBox" name="box_spatial_width">
-         <property name="minimum">
-          <number>1</number>
-         </property>
-         <property name="maximum">
-          <number>10000</number>
-         </property>
-         <property name="value">
-          <number>10</number>
-         </property>
-        </widget>
-       </item>
-       <item row="6" column="0" colspan="2">
-        <widget class="QLabel" name="image_spatial">
-         <property name="text">
-          <string/>
-         </property>
-         <property name="pixmap">
-          <pixmap resource="MutualismBreakdowner.qrc">:/images/Grid.jpg</pixmap>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignCenter</set>
-         </property>
-        </widget>
-       </item>
        <item row="0" column="0">
-        <widget class="QLabel" name="label_spatial_delta_t">
+        <widget class="QLabel" name="label_spatial_height">
          <property name="text">
-          <string>Delta t</string>
+          <string>Grid height</string>
          </property>
         </widget>
        </item>
-       <item row="0" column="1">
-        <widget class="QDoubleSpinBox" name="box_spatial_delta_t">
-         <property name="decimals">
-          <number>6</number>
-         </property>
-         <property name="minimum">
-          <double>0.000000000000000</double>
-         </property>
-         <property name="maximum">
-          <double>1.000000000000000</double>
-         </property>
-         <property name="singleStep">
-          <double>0.001000000000000</double>
-         </property>
-         <property name="value">
-          <double>0.010000000000000</double>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="0">
-        <widget class="QLabel" name="label_spatial_width">
-         <property name="text">
-          <string>Width</string>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="0">
+       <item row="3" column="0">
         <spacer name="verticalSpacer_4">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -194,14 +58,27 @@
          </property>
         </spacer>
        </item>
-       <item row="1" column="0">
-        <widget class="QLabel" name="label_spatial_height">
-         <property name="text">
-          <string>Height</string>
+       <item row="1" column="1">
+        <widget class="QSpinBox" name="box_spatial_width">
+         <property name="minimum">
+          <number>1</number>
+         </property>
+         <property name="maximum">
+          <number>10000</number>
+         </property>
+         <property name="value">
+          <number>10</number>
          </property>
         </widget>
        </item>
-       <item row="1" column="1">
+       <item row="1" column="0">
+        <widget class="QLabel" name="label_spatial_width">
+         <property name="text">
+          <string>Grid width</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
         <widget class="QSpinBox" name="box_spatial_height">
          <property name="minimum">
           <number>1</number>
@@ -214,6 +91,19 @@
          </property>
         </widget>
        </item>
+       <item row="5" column="0" colspan="2">
+        <widget class="QLabel" name="image_spatial">
+         <property name="text">
+          <string/>
+         </property>
+         <property name="pixmap">
+          <pixmap resource="MutualismBreakdowner.qrc">:/images/Grid.jpg</pixmap>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
      <widget class="QWidget" name="page_initial_conditions">
@@ -221,8 +111,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>299</width>
-        <height>140</height>
+        <width>400</width>
+        <height>397</height>
        </rect>
       </property>
       <attribute name="label">
@@ -331,8 +221,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>98</width>
-        <height>28</height>
+        <width>400</width>
+        <height>82</height>
        </rect>
       </property>
       <attribute name="label">
@@ -341,6 +231,14 @@
       <layout class="QGridLayout" name="gridLayout_2"/>
      </widget>
      <widget class="QWidget" name="page_seagrass_colonisation">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>400</width>
+        <height>82</height>
+       </rect>
+      </property>
       <attribute name="label">
        <string>Seagrass colonisation</string>
       </attribute>
@@ -352,7 +250,7 @@
         <x>0</x>
         <y>0</y>
         <width>400</width>
-        <height>79</height>
+        <height>82</height>
        </rect>
       </property>
       <attribute name="label">
@@ -365,8 +263,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>98</width>
-        <height>28</height>
+        <width>400</width>
+        <height>82</height>
        </rect>
       </property>
       <attribute name="label">
@@ -379,8 +277,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>98</width>
-        <height>28</height>
+        <width>400</width>
+        <height>82</height>
        </rect>
       </property>
       <attribute name="label">
@@ -393,8 +291,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>98</width>
-        <height>28</height>
+        <width>400</width>
+        <height>82</height>
        </rect>
       </property>
       <attribute name="label">
@@ -407,8 +305,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>98</width>
-        <height>28</height>
+        <width>400</width>
+        <height>82</height>
        </rect>
       </property>
       <attribute name="label">
