Use correct resources

--- a/qtmutualismbreakdownermenudialog.ui
+++ b/qtmutualismbreakdownermenudialog.ui
@@ -44,7 +44,7 @@ QPushButton
       <string/>
      </property>
      <property name="pixmap">
-      <pixmap resource="MutualismBreakdowner.qrc">:/images/EquilibriumSmall.jpg</pixmap>
+      <pixmap resource="korter_project.qrc">:/images/EquilibriumSmall.jpg</pixmap>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
@@ -95,7 +95,7 @@ QPushButton
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources>
-  <include location="MutualismBreakdowner.qrc"/>
+  <include location="korter_project.qrc"/>
  </resources>
  <connections/>
 </ui>
