--- a/qtmutualismbreakdownermenudialog.ui
+++ b/qtmutualismbreakdownermenudialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>303</width>
-    <height>380</height>
+    <height>343</height>
    </rect>
   </property>
   <property name="font">
@@ -16,11 +16,11 @@
    </font>
   </property>
   <property name="windowTitle">
-   <string>MutualismBreakdowner</string>
+   <string>Korter project</string>
   </property>
   <property name="styleSheet">
    <string notr="true">QDialog {
- background-color: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 1, stop: 0  #bbf, stop: 0.2  #bbf, stop: 0.5 #bfb, stop: 0.8 #fbb, stop: 1 #fbb);
+ background-color: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 1, stop: 0  #ffb, stop: 1 #fbb);
   border: 1px solid black
 }
 
