--- a/qtmutualismbreakdownerparameterswidget.ui
+++ b/qtmutualismbreakdownerparameterswidget.ui
@@ -119,7 +119,7 @@
        <string>Initial conditions</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_8">
-       <item row="3" column="0">
+       <item row="4" column="0">
         <widget class="QLabel" name="label_initial_seagrass_concentration">
          <property name="text">
           <string>Sulfide concentration</string>
@@ -127,13 +127,13 @@
         </widget>
        </item>
        <item row="2" column="0">
-        <widget class="QLabel" name="label_initial_seagrass_density">
+        <widget class="QLabel" name="label_n_seeds">
          <property name="text">
-          <string>Seagrass density</string>
+          <string>Number of seeds</string>
          </property>
         </widget>
        </item>
-       <item row="3" column="1">
+       <item row="4" column="1">
         <widget class="QDoubleSpinBox" name="box_initial_sulfide_concentration">
          <property name="decimals">
           <number>4</number>
@@ -150,29 +150,13 @@
         </widget>
        </item>
        <item row="0" column="0">
-        <widget class="QLabel" name="label_initial_loripes_density">
+        <widget class="QLabel" name="label_n_nurse_plants">
          <property name="text">
           <string>Number of nurse plants</string>
          </property>
         </widget>
        </item>
-       <item row="2" column="1">
-        <widget class="QDoubleSpinBox" name="box_initial_seagrass_density">
-         <property name="decimals">
-          <number>4</number>
-         </property>
-         <property name="maximum">
-          <double>1000000.000000000000000</double>
-         </property>
-         <property name="singleStep">
-          <double>0.100000000000000</double>
-         </property>
-         <property name="value">
-          <double>0.100000000000000</double>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="0" colspan="2">
+       <item row="6" column="0" colspan="2">
         <widget class="QLabel" name="image_initial_conditions">
          <property name="text">
           <string/>
@@ -185,7 +169,7 @@
          </property>
         </widget>
        </item>
-       <item row="4" column="0">
+       <item row="5" column="0">
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -201,6 +185,9 @@
        <item row="0" column="1">
         <widget class="QSpinBox" name="box_n_nurse_plants"/>
        </item>
+       <item row="2" column="1">
+        <widget class="QSpinBox" name="box_n_seeds"/>
+       </item>
       </layout>
      </widget>
      <widget class="QWidget" name="page_poisoning">
@@ -208,8 +195,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>100</width>
-        <height>30</height>
+        <width>400</width>
+        <height>82</height>
        </rect>
       </property>
       <attribute name="label">
@@ -222,8 +209,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>100</width>
-        <height>30</height>
+        <width>400</width>
+        <height>82</height>
        </rect>
       </property>
       <attribute name="label">
@@ -236,8 +223,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>100</width>
-        <height>30</height>
+        <width>400</width>
+        <height>82</height>
        </rect>
       </property>
       <attribute name="label">
@@ -250,8 +237,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>100</width>
-        <height>30</height>
+        <width>400</width>
+        <height>82</height>
        </rect>
       </property>
       <attribute name="label">
@@ -264,8 +251,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>100</width>
-        <height>30</height>
+        <width>400</width>
+        <height>82</height>
        </rect>
       </property>
       <attribute name="label">
@@ -278,8 +265,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>100</width>
-        <height>30</height>
+        <width>400</width>
+        <height>82</height>
        </rect>
       </property>
       <attribute name="label">
@@ -292,8 +279,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>100</width>
-        <height>30</height>
+        <width>400</width>
+        <height>82</height>
        </rect>
       </property>
       <attribute name="label">
