--- a/korter_project_fitness_widget.ui
+++ b/korter_project_fitness_widget.ui
@@ -28,10 +28,24 @@
     </spacer>
    </item>
    <item row="1" column="3">
-    <widget class="QDoubleSpinBox" name="box_fac_stddev"/>
+    <widget class="QDoubleSpinBox" name="box_fac_stddev">
+     <property name="singleStep">
+      <double>0.010000000000000</double>
+     </property>
+     <property name="value">
+      <double>0.100000000000000</double>
+     </property>
+    </widget>
    </item>
    <item row="2" column="3">
-    <widget class="QDoubleSpinBox" name="box_unfac_stddev"/>
+    <widget class="QDoubleSpinBox" name="box_unfac_stddev">
+     <property name="singleStep">
+      <double>0.010000000000000</double>
+     </property>
+     <property name="value">
+      <double>0.200000000000000</double>
+     </property>
+    </widget>
    </item>
    <item row="0" column="3">
     <widget class="QLabel" name="label_stddev">
@@ -41,10 +55,18 @@
     </widget>
    </item>
    <item row="1" column="2">
-    <widget class="QDoubleSpinBox" name="box_fac_opt"/>
+    <widget class="QDoubleSpinBox" name="box_fac_opt">
+     <property name="value">
+      <double>0.500000000000000</double>
+     </property>
+    </widget>
    </item>
    <item row="2" column="2">
-    <widget class="QDoubleSpinBox" name="box_unfac_opt"/>
+    <widget class="QDoubleSpinBox" name="box_unfac_opt">
+     <property name="value">
+      <double>0.100000000000000</double>
+     </property>
+    </widget>
    </item>
    <item row="0" column="2">
     <widget class="QLabel" name="label_opt">
