--- a/korter_project_qt_parameters_widget.ui
+++ b/korter_project_qt_parameters_widget.ui
@@ -1,25 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>QtMutualismBreakdownerParametersWidget</class>
- <widget class="QWidget" name="QtMutualismBreakdownerParametersWidget">
+ <class>korter_project_qt_parameters_widget</class>
+ <widget class="QWidget" name="korter_project_qt_parameters_widget">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>418</width>
-    <height>807</height>
+    <height>728</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout_4">
-   <item row="2" column="0" colspan="2">
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="3" column="0">
+    <widget class="QPushButton" name="button_load">
+     <property name="text">
+      <string>&amp;Load parameters</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0">
+    <widget class="QPushButton" name="button_save">
+     <property name="text">
+      <string>&amp;Save parameters</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0">
     <widget class="QToolBox" name="toolBox">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="minimumSize">
       <size>
        <width>400</width>
-       <height>0</height>
+       <height>500</height>
       </size>
      </property>
      <property name="currentIndex">
@@ -31,7 +57,7 @@
         <x>0</x>
         <y>0</y>
         <width>400</width>
-        <height>261</height>
+        <height>376</height>
        </rect>
       </property>
       <attribute name="label">
@@ -111,25 +137,18 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>233</width>
-        <height>137</height>
+        <width>400</width>
+        <height>524</height>
        </rect>
       </property>
       <attribute name="label">
        <string>Initial conditions</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_8">
-       <item row="2" column="0">
-        <widget class="QLabel" name="label_n_seeds">
+       <item row="3" column="0">
+        <widget class="QLabel" name="label_initial_seagrass_concentration">
          <property name="text">
-          <string>Number of seeds</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="label_n_nurse_plants">
-         <property name="text">
-          <string>Number of nurse plants</string>
+          <string>RNG seed</string>
          </property>
         </widget>
        </item>
@@ -146,6 +165,9 @@
          </property>
         </widget>
        </item>
+       <item row="3" column="1">
+        <widget class="QSpinBox" name="box_rng_seed"/>
+       </item>
        <item row="5" column="0">
         <spacer name="verticalSpacer">
          <property name="orientation">
@@ -159,21 +181,113 @@
          </property>
         </spacer>
        </item>
-       <item row="0" column="1">
-        <widget class="QSpinBox" name="box_n_nurse_plants"/>
-       </item>
-       <item row="2" column="1">
-        <widget class="QSpinBox" name="box_n_seeds"/>
-       </item>
-       <item row="3" column="1">
-        <widget class="QSpinBox" name="box_rng_seed"/>
-       </item>
-       <item row="3" column="0">
-        <widget class="QLabel" name="label_initial_seagrass_concentration">
+       <item row="1" column="0">
+        <widget class="QLabel" name="label_init_trait_stddev">
          <property name="text">
-          <string>RNG seed</string>
+          <string>Initial trait stddev</string>
          </property>
         </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="label_init_trait_mean">
+         <property name="text">
+          <string>Initial trait mean</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QDoubleSpinBox" name="box_init_trait_mean">
+         <property name="singleStep">
+          <double>0.010000000000000</double>
+         </property>
+         <property name="value">
+          <double>1.000000000000000</double>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QDoubleSpinBox" name="box_init_trait_stddev">
+         <property name="decimals">
+          <number>3</number>
+         </property>
+         <property name="singleStep">
+          <double>0.001000000000000</double>
+         </property>
+         <property name="value">
+          <double>0.100000000000000</double>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="page_biology">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>400</width>
+        <height>524</height>
+       </rect>
+      </property>
+      <attribute name="label">
+       <string>Biology</string>
+      </attribute>
+      <layout class="QGridLayout" name="gridLayout_11">
+       <item row="0" column="0">
+        <widget class="QLabel" name="label_n_seeds">
+         <property name="text">
+          <string>Number of seeds</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <spacer name="verticalSpacer_3">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="4" column="0" colspan="2">
+        <widget class="QLabel" name="image_biology">
+         <property name="text">
+          <string/>
+         </property>
+         <property name="pixmap">
+          <pixmap resource="korter_project.qrc">:/images/PrimordialSoup.png</pixmap>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QSpinBox" name="box_n_seeds"/>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="label_n_nurse_plants">
+         <property name="text">
+          <string>Number of nurse plants</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QSpinBox" name="box_n_nurse_plants"/>
+       </item>
+       <item row="2" column="0">
+        <widget class="QLabel" name="label_mut_stddev">
+         <property name="text">
+          <string>Mutation stddev</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="QDoubleSpinBox" name="box_mut_stddev"/>
        </item>
       </layout>
      </widget>
@@ -183,7 +297,7 @@
         <x>0</x>
         <y>0</y>
         <width>400</width>
-        <height>82</height>
+        <height>524</height>
        </rect>
       </property>
       <attribute name="label">
@@ -191,107 +305,9 @@
       </attribute>
       <layout class="QGridLayout" name="gridLayout_2"/>
      </widget>
-     <widget class="QWidget" name="page_seagrass_colonisation">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>98</width>
-        <height>28</height>
-       </rect>
-      </property>
-      <attribute name="label">
-       <string>Seagrass colonisation</string>
-      </attribute>
-      <layout class="QGridLayout" name="gridLayout_11"/>
-     </widget>
-     <widget class="QWidget" name="page_seagrass_growth">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>98</width>
-        <height>28</height>
-       </rect>
-      </property>
-      <attribute name="label">
-       <string>Seagrass growth</string>
-      </attribute>
-      <layout class="QGridLayout" name="gridLayout_5"/>
-     </widget>
-     <widget class="QWidget" name="page_sulfide_consumption">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>98</width>
-        <height>28</height>
-       </rect>
-      </property>
-      <attribute name="label">
-       <string>Sulfide consumption</string>
-      </attribute>
-      <layout class="QGridLayout" name="gridLayout_7"/>
-     </widget>
-     <widget class="QWidget" name="page_sulfide_detoxification">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>98</width>
-        <height>28</height>
-       </rect>
-      </property>
-      <attribute name="label">
-       <string>Sulfide detoxification</string>
-      </attribute>
-      <layout class="QGridLayout" name="gridLayout_6"/>
-     </widget>
-     <widget class="QWidget" name="page_sulfide_diffusion">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>98</width>
-        <height>28</height>
-       </rect>
-      </property>
-      <attribute name="label">
-       <string>Sulfide diffusion</string>
-      </attribute>
-      <layout class="QGridLayout" name="gridLayout"/>
-     </widget>
-     <widget class="QWidget" name="page_sulfide_production">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>98</width>
-        <height>28</height>
-       </rect>
-      </property>
-      <attribute name="label">
-       <string>Sulfide production</string>
-      </attribute>
-      <layout class="QGridLayout" name="gridLayout_3"/>
-     </widget>
     </widget>
    </item>
-   <item row="5" column="0" colspan="2">
-    <widget class="QPushButton" name="button_save">
-     <property name="text">
-      <string>&amp;Save parameters</string>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="0" colspan="2">
-    <widget class="QPushButton" name="button_load">
-     <property name="text">
-      <string>&amp;Load parameters</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="0">
+   <item row="1" column="0">
     <spacer name="verticalSpacer_2">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -308,7 +324,6 @@
  </widget>
  <tabstops>
   <tabstop>button_load</tabstop>
-  <tabstop>button_save</tabstop>
  </tabstops>
  <resources>
   <include location="korter_project.qrc"/>
