--- a/korter_project_qt_parameters_widget.ui
+++ b/korter_project_qt_parameters_widget.ui
@@ -49,7 +49,7 @@
       </size>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>2</number>
      </property>
      <widget class="QWidget" name="page_spatial_plot">
       <property name="geometry">
@@ -137,8 +137,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>400</width>
-        <height>524</height>
+        <width>222</width>
+        <height>137</height>
        </rect>
       </property>
       <attribute name="label">
@@ -226,7 +226,7 @@
         <x>0</x>
         <y>0</y>
         <width>400</width>
-        <height>524</height>
+        <height>397</height>
        </rect>
       </property>
       <attribute name="label">
@@ -267,7 +267,14 @@
         </widget>
        </item>
        <item row="0" column="1">
-        <widget class="QSpinBox" name="box_n_seeds"/>
+        <widget class="QSpinBox" name="box_n_seeds">
+         <property name="maximum">
+          <number>10000</number>
+         </property>
+         <property name="value">
+          <number>20</number>
+         </property>
+        </widget>
        </item>
        <item row="1" column="0">
         <widget class="QLabel" name="label_n_nurse_plants">
@@ -277,7 +284,14 @@
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QSpinBox" name="box_n_nurse_plants"/>
+        <widget class="QSpinBox" name="box_n_nurse_plants">
+         <property name="maximum">
+          <number>1000</number>
+         </property>
+         <property name="value">
+          <number>10</number>
+         </property>
+        </widget>
        </item>
        <item row="2" column="0">
         <widget class="QLabel" name="label_mut_stddev">
@@ -287,7 +301,11 @@
         </widget>
        </item>
        <item row="2" column="1">
-        <widget class="QDoubleSpinBox" name="box_mut_stddev"/>
+        <widget class="QDoubleSpinBox" name="box_mut_stddev">
+         <property name="value">
+          <double>0.100000000000000</double>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
@@ -296,8 +314,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>400</width>
-        <height>524</height>
+        <width>98</width>
+        <height>28</height>
        </rect>
       </property>
       <attribute name="label">
