--- a/korter_project_qt_fitness_widget.ui
+++ b/korter_project_qt_fitness_widget.ui
@@ -26,8 +26,11 @@
    </item>
    <item row="1" column="2">
     <widget class="QDoubleSpinBox" name="box_fac_stddev">
+     <property name="decimals">
+      <number>3</number>
+     </property>
      <property name="singleStep">
-      <double>0.010000000000000</double>
+      <double>0.001000000000000</double>
      </property>
      <property name="value">
       <double>0.100000000000000</double>
@@ -36,8 +39,11 @@
    </item>
    <item row="2" column="2">
     <widget class="QDoubleSpinBox" name="box_unfac_stddev">
+     <property name="decimals">
+      <number>3</number>
+     </property>
      <property name="singleStep">
-      <double>0.010000000000000</double>
+      <double>0.001000000000000</double>
      </property>
      <property name="value">
       <double>0.200000000000000</double>
